# ARIA

./: .gitignore  README.md  pyproject.toml
aria/: __init__.py  cli.py
aria/core/: __init__.py  orchestrator.py  reasoning.py
aria/decision/: __init__.py
aria/modules/: __init__.py  de_analysis.py  deconvolution.py  gsea.py  ppi.py  ssgsea.py  wgcna.py
aria/reporting/: __init__.py
benchmarks/data/: fmr1_samples.csv  seqc_samples.csv
benchmarks/data/fmr1/: GSE180135_deSeq2_counts.txt
benchmarks/scripts/: download_benchmarks.sh  run_ablation_study.R  run_airway_benchmark.R  run_bottomly_benchmark.R  run_fmr1_benchmark.R  run_gsea_priority_test.R  run_metadata_obfuscation.R  run_pasilla_benchmark.R  run_reproducibility_test.R  run_seqc_benchmark.R
docker/: Dockerfile  Dockerfile.bench2  Dockerfile.benchmark
docs/: ARIA_bioRxiv.html  ARIA_korean.html  ARIA_manuscript.html  ARIA_supplementary.html  PAPER_OUTLINE.md  bioRxiv_submission.md  fix_fig3_fig4.py  generate_bioRxiv_pdf.py  generate_fig1_new.py  generate_fig1_v2.py  generate_fig2.py  generate_figures.py  generate_korean_pdf.py  manuscript_full.md  manuscript_korean.md  paper_discussion.md  paper_draft.md  paper_methods.md  paper_results.md  supplementary.md
tests/: test_reasoning.py
